--- a/Styles.css
+++ b/Styles.css
@@ -6,13 +6,13 @@ body
     align-items: center;
     height: 100vh;
     margin: 0;
-    background-color: #f0f0f0;
+    background: linear-gradient(to right, #5b005b, #6a0101);
 }
 
 .container
 {
     text-align: center;
-    background: white;
+    background: rgb(255, 255, 255);
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
@@ -41,7 +41,7 @@ button
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
-    background-color: #007bff;
+    background-color: #0011ff;
     color: white;
     cursor: pointer;
     transition: background-color 0.3s ease;
@@ -49,7 +49,7 @@ button
 
 button:hover
 {
-    background-color: #0056b3;
+    background-color: #0011ff;
 }
 
 #output
