--- a/Styles.css
+++ b/Styles.css
@@ -33,6 +33,35 @@ body
     padding: 10px 20px;
     margin: 0 5px;
     border-radius: 5px;
+    transition: transform 0.8s ease, opacity 0.8s ease;
+}
+
+.queue-element.fade-in
+{
+    transform: translateY(-20px);
+    opacity: 0;
+    animation: fadeIn 0.5s forwards;
+}
+
+.queue-element.fade-out
+{
+    transform: translateY(-20px);
+    opacity: 0;
+}
+
+@keyframes fadeIn
+{
+    0%
+    {
+        transform: translateY(20px);
+        opacity: 0;
+    }
+
+    100%
+    {
+        transform: translateY(0);
+        opacity: 1;
+    }
 }
 
 button
@@ -44,7 +73,7 @@ button
     background-color: #0011ff;
     color: white;
     cursor: pointer;
-    transition: background-color 0.3s ease;
+    transition: background-color 0.5s ease;
 }
 
 button:hover
