--- a/Styles.css
+++ b/Styles.css
@@ -1,10 +1,10 @@
 body
 {
-    font-family: Arial, sans-serif;
+    font-family: Comic Neue;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 65vh;
     margin: 0;
     background: linear-gradient(to right, #5b005b, #6a0101);
 }
@@ -13,9 +13,9 @@ body
 {
     text-align: center;
     background: rgb(255, 255, 255);
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    padding: 65px;
+    border-radius: 30px;
+    box-shadow: 0 0 30px rgba(0,0,0,0.1);
 }
 
 .queue-container
@@ -30,7 +30,7 @@ body
 {
     background: #007bff;
     color: white;
-    padding: 10px 20px;
+    padding: 12px 14px;
     margin: 0 5px;
     border-radius: 5px;
     transition: transform 0.8s ease, opacity 0.8s ease;
@@ -40,7 +40,7 @@ body
 {
     transform: translateY(-20px);
     opacity: 0;
-    animation: fadeIn 0.5s forwards;
+    animation: fadeIn 0.8s forwards;
 }
 
 .queue-element.fade-out
@@ -67,9 +67,9 @@ body
 button
 {
     margin: 5px;
-    padding: 10px 20px;
+    padding: 12px 16px;
     border: none;
-    border-radius: 5px;
+    border-radius: 8px;
     background-color: #0011ff;
     color: white;
     cursor: pointer;
@@ -84,5 +84,5 @@ button:hover
 #output
 {
     margin-top: 20px;
-    font-weight: bold;
+    font-weight: Comic Neue;
 }
